welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:8: error: not found: value LookingFor
     	       if(nums(i)== LookingFor) aux = aux + 1;
                            ^